--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.5",
     "gatsby": "^2.24.79",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
