--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "@apollo/client": "^3.2.5",
     "gatsby": "^2.24.79",
     "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-query-params": "^1.2.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "apollo-server-lambda": "^2.18.2",
+    "faunadb": "^3.0.1",
+    "graphql": "^14.1.1",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "prettier": "2.1.2"
